# move_base_msgs

move_base_msgs_ros1/: CMakeLists.txt  package.xml
move_base_msgs_ros1/msg/: MoveBaseAction.msg  MoveBaseActionFeedback.msg  MoveBaseActionGoal.msg  MoveBaseActionResult.msg
move_base_msgs_ros2/: CMakeLists.txt  package.xml
