<?xml version="1.0"?>
<package format="2">
  <name>kabam_msgs</name>
  <version>0.0.0</version>
  <description>The kabam_msgs package has custom ROS message, service and action interfaces used at KABAM</description>

  <maintainer email="swarooph@kabam.ai">Swarooph Seshadri</maintainer>

  <license>BSD</license>
  
  <url type="website">https://kabam.ai/</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
